--- a/docs/style.css
+++ b/docs/style.css
@@ -25,26 +25,6 @@ body {
   margin: 1rem;
 } */
 
-#badges-container img {
-  margin: 0 0.5rem;
-}
-
-/* .cursor {
-  pointer-events: none;
-}
-
-.cursor__ball {
-  position: fixed;
-  top: 0;
-  left: 0;
-  mix-blend-mode: difference;
-  z-index: 1000;
-}
-
-.cursor__ball circle {
-  fill: #f7f8fa;
-} */
-
 .content {
   display: flex;
   flex-direction: column;
@@ -79,15 +59,10 @@ a {
   color: #010101;
 }
 
-a:hover {
-  transform: scale(1.3);
-  transition: transform 0.3s ease;
-}
-
-@media (max-width: 768px) {
-  #sidebar {
-    visibility: hidden;
-  }
+.u-link:hover {
+  background-color: black;
+  color: white;
+  border-bottom: 0.2em solid rgba(236, 214, 39, 255);
 }
 
 #sidebar {
@@ -122,12 +97,42 @@ a:hover {
   border: none;
 }
 
-.canvas-container {
+#canvas {
   position: fixed;
   top: 1rem;
   right: 2rem;
 }
 
 #badges-container {
-  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1em;
+  margin: 2rem;
+}
+
+#go-to-project {
+  position: fixed;
+  top: 2rem;
+  left: 1rem;
+}
+
+@media (max-width: 768px) {
+  #title {
+    display: none;
+  }
+
+  #sidebar {
+    visibility: hidden;
+  }
+
+  #canvas {
+    width: 100px;
+    height: 100px;
+  }
+
+  #badges-container {
+    display: none;
+  }
 }
